// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`typography should contain correct values for headline 1`] = `
{
  "1": {
    "@media (min-width: 1000px) and (max-width: 1300px)": {
      "fontSize": "2.75rem",
    },
    "@media (min-width: 1300px) and (max-width: 1760px)": {
      "fontSize": "3.25rem",
    },
    "@media (min-width: 1760px)": {
      "fontSize": "3.75rem",
    },
    "@media (min-width: 760px) and (max-width: 1000px)": {
      "fontSize": "2.25rem",
    },
    "fontFamily": "'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "fontSize": "1.75rem",
    "fontWeight": 600,
    "lineHeight": "calc(6px + 2.125ex)",
  },
  "2": {
    "@media (min-width: 1000px) and (max-width: 1300px)": {
      "fontSize": "2.25rem",
    },
    "@media (min-width: 1300px) and (max-width: 1760px)": {
      "fontSize": "2.625rem",
    },
    "@media (min-width: 1760px)": {
      "fontSize": "3rem",
    },
    "@media (min-width: 760px) and (max-width: 1000px)": {
      "fontSize": "1.875rem",
    },
    "fontFamily": "'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "fontSize": "1.5rem",
    "fontWeight": 600,
    "lineHeight": "calc(6px + 2.125ex)",
  },
  "3": {
    "@media (min-width: 1000px) and (max-width: 1300px)": {
      "fontSize": "1.75rem",
    },
    "@media (min-width: 1300px) and (max-width: 1760px)": {
      "fontSize": "2rem",
    },
    "@media (min-width: 1760px)": {
      "fontSize": "2.25rem",
    },
    "@media (min-width: 760px) and (max-width: 1000px)": {
      "fontSize": "1.5rem",
    },
    "fontFamily": "'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "fontSize": "1.25rem",
    "fontWeight": 600,
    "lineHeight": "calc(6px + 2.125ex)",
  },
  "4": {
    "@media (min-width: 1000px) and (max-width: 1300px)": {
      "fontSize": "1.25rem",
    },
    "@media (min-width: 1300px) and (max-width: 1760px)": {
      "fontSize": "1.375rem",
    },
    "@media (min-width: 1760px)": {
      "fontSize": "1.5rem",
    },
    "@media (min-width: 760px) and (max-width: 1000px)": {
      "fontSize": "1.125rem",
    },
    "fontFamily": "'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "fontSize": "1rem",
    "fontWeight": 600,
    "lineHeight": "calc(6px + 2.125ex)",
  },
  "5": {
    "fontFamily": "'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "fontSize": "1rem",
    "fontWeight": 600,
    "lineHeight": "calc(6px + 2.125ex)",
  },
}
`;

exports[`typography should contain correct values for text 1`] = `
{
  "large": {
    "fontFamily": "'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "fontSize": "2.25rem",
    "fontWeight": 400,
    "lineHeight": "calc(6px + 2.125ex)",
  },
  "medium": {
    "fontFamily": "'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "fontSize": "1.5rem",
    "fontWeight": 400,
    "lineHeight": "calc(6px + 2.125ex)",
  },
  "small": {
    "fontFamily": "'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "fontSize": "1rem",
    "fontWeight": 400,
    "lineHeight": "calc(6px + 2.125ex)",
  },
  "xLarge": {
    "fontFamily": "'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "fontSize": "3.25rem",
    "fontWeight": 400,
    "lineHeight": "calc(6px + 2.125ex)",
  },
  "xSmall": {
    "fontFamily": "'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "fontSize": "0.75rem",
    "fontWeight": 400,
    "lineHeight": "calc(6px + 2.125ex)",
  },
}
`;

exports[`typography should contain correct values for title 1`] = `
{
  "large": {
    "@media (min-width: 1000px) and (max-width: 1300px)": {
      "fontSize": "3.25rem",
    },
    "@media (min-width: 1300px) and (max-width: 1760px)": {
      "fontSize": "3.875rem",
    },
    "@media (min-width: 1760px)": {
      "fontSize": "4.5rem",
    },
    "@media (min-width: 760px) and (max-width: 1000px)": {
      "fontSize": "2.625rem",
    },
    "fontFamily": "'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "fontSize": "2rem",
    "fontWeight": 600,
    "lineHeight": "calc(6px + 2.125ex)",
  },
}
`;
